--- a/starbucks-practice/index.html
+++ b/starbucks-practice/index.html
@@ -35,6 +35,7 @@
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
+  <script defer src="./js/youtube.js"></script>
   <script defer src="./js/main.js"></script>
 </head>
 
@@ -488,6 +489,15 @@
       </div>
     </div>
   </section>
+
+  <!-- YOUTUBE VIDEO -->
+  <section class="youtube">
+    <div class="youtube__area">
+      <div id="player"></div>
+    </div>
+    <div class="youtube__cover"></div>
+  </section>
+
 </body>
 
 </html>
