--- a/starbucks-practice/index.html
+++ b/starbucks-practice/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Starbucks</title>
+  <title>Starbucks Coffee Korea</title>
 
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Starbucks" />
@@ -25,6 +25,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" />
   <link rel="preconnect" href="https://fonts.gstatic.com"> 
   <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="./css/main.css" />
 
@@ -648,10 +649,10 @@
       </div>
 
       <div class="info">
-        <span>사업자등록번호 201-81-21515</span>
-        <span>(주)스타벅스 코리아 대표이사 이석구</span>
-        <span>TEL : 02) 3015-1100 / FAX : 02) 3015-1106</span>
-        <span>개인정보 책임자 : 강기원</span>
+        <span>사업자등록번호:201-81-21515</span>
+        <span>(주)스타벅스 코리아 대표이사:송 데이비드 호섭</span>
+        <span>TEL:1522-3232</span>
+        <span>개인정보 책임자:하익성</span>
       </div>
 
       <p class="copyright">
